--- a/src/pages/course/course.html
+++ b/src/pages/course/course.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Courses</ion-title>
+    <ion-title>My Courses</ion-title>
   </ion-navbar>
 
 </ion-header>
