--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -14,10 +14,12 @@
 </ion-header>
 
 <ion-content padding>
+<!--  <ion-item >
+<img class="circle-pic" src="assets/img/faculty.png">
+</ion-item>
+-->
+<h1 style="color:black;text-align:center">Hi {{name}}</h1>
 <ion-grid>
-<ion-row>
-  <ion-list><h1>Hi {{name}}</h1></ion-list>
-</ion-row>
 <ion-row>
   <ion-col col-12>
     <ion-card >
@@ -38,10 +40,24 @@
 <ion-col col-6>
 <ion-card >
   <ion-card-content style="text-align:center;background-color:#488AFF;color:white;">
-    FREE SLOTS<br>3
+    PENDING ASSIGNMENTS <br>3
   </ion-card-content>
 </ion-card>
 </ion-col>
 </ion-row>
 </ion-grid>
+
+<ion-grid>
+<ion-row>
+<ion-col >
+<ion-card >
+  <ion-card-content style="text-align:center;background-color:#488AFF;color:white;">
+    Attendance Level: Course<br>Not Safe
+  </ion-card-content>
+</ion-card>
+</ion-col>
+</ion-row>
+</ion-grid>
+
+
 </ion-content>
