--- a/src/pages/course/course.html
+++ b/src/pages/course/course.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
+<!-- List of courses -->
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
