changes in course

--- a/src/pages/course/course.html
+++ b/src/pages/course/course.html
@@ -15,7 +15,7 @@
 
 </ion-header>
 
-
+<!-- Courses start here -->
 <ion-content padding>
   <div>
 <ion-card *ngFor="let k of courses" (click)="OpenCourse('CoursedetailPage',k.id)">
