--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -14,5 +14,35 @@
 
 
 <ion-content padding>
+	<ion-card>
+
+  		<ion-card-header>
+    			Card Header
+  		</ion-card-header>
+
+  		<ion-card-content>
+    			<!-- Add card content here! -->
+  		</ion-card-content>
+	</ion-card>
+	<ion-card>
+
+  		<ion-card-header>
+    			Card Header
+  		</ion-card-header>
+
+  		<ion-card-content>
+    			<!-- Add card content here! -->
+  		</ion-card-content>
+	</ion-card>
+	<ion-card>
+
+  		<ion-card-header>
+    			Card Header
+  		</ion-card-header>
+
+  		<ion-card-content>
+    			<!-- Add card content here! -->
+  		</ion-card-content>
+	</ion-card>
 
 </ion-content>
