--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -3,6 +3,10 @@
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
+  {{name}} stores the student name
+  {{course_name}} displays the next course student has to attend.
+  {{course_time| date:'shortTime'}} provides the time for next course
+
 -->
 <ion-header>
   <ion-navbar>
