--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -6,6 +6,8 @@
   {{name}} stores the student name
   {{course_name}} displays the next course student has to attend.
   {{course_time| date:'shortTime'}} provides the time for next course
+  {{num_lec}} stores the number of lectures the student has on that particular day
+  
 
 -->
 <ion-header>
