--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -3,11 +3,12 @@
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
-  {{name}} stores the student name
+  {{name}} stores the student name.
   {{course_name}} displays the next course student has to attend.
-  {{course_time| date:'shortTime'}} provides the time for next course
-  {{num_lec}} stores the number of lectures the student has on that particular day
-  
+  {{course_time| date:'shortTime'}} provides the time for next course.
+  {{num_lec}} stores the number of lectures the student has on that particular day.
+  {{pend_assgn}} shows the assignment yet to be submitted.
+  {{attendance}} shows the attendance level.
 
 -->
 <ion-header>
