--- a/src/pages/timetable/timetable.html
+++ b/src/pages/timetable/timetable.html
@@ -20,6 +20,6 @@
 <ion-input [(ngModel)]="session" name="session" type="text" ></ion-input>
 </ion-item>
 <button ion-button block  (click)="giveAttendance()" style="text-align:center;background-color:red;">
-<h1 style="color:white;">Answer your Attendance</h1>
+<h1 style="color:white;">Answer Attendance</h1>
 </button>
 </ion-content>
