--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,32 +17,23 @@
 	<ion-card>
 
   		<ion-card-header>
-    			Card Header
+    			User Name
   		</ion-card-header>
 
   		<ion-card-content>
-    			<!-- Add card content here! -->
+    			<ion-input [value]="'murali.v15'" readonly></ion-input>
   		</ion-card-content>
 	</ion-card>
 	<ion-card>
 
   		<ion-card-header>
-    			Card Header
+    			ID
   		</ion-card-header>
 
   		<ion-card-content>
-    			<!-- Add card content here! -->
+    			<ion-input [value]="'123'" readonly></ion-input>
   		</ion-card-content>
 	</ion-card>
-	<ion-card>
 
-  		<ion-card-header>
-    			Card Header
-  		</ion-card-header>
-
-  		<ion-card-content>
-    			<!-- Add card content here! -->
-  		</ion-card-content>
-	</ion-card>
 
 </ion-content>
