--- a/src/pages/coursedetail/coursedetail.html
+++ b/src/pages/coursedetail/coursedetail.html
@@ -28,7 +28,7 @@
   <ion-segment-button value="Records">
     Records
   </ion-segment-button>
-    <!-- <div>{{socs}}</div> -->
+    <!-- <div>{{socs}}</div>some comment -->
   </ion-segment>
 
 <!-- </div> -->
@@ -36,6 +36,7 @@
 
 <ion-list *ngSwitchCase="'Structure'">
   <ion-card>
+
     <ion-card-header>Course Structure</ion-card-header>
     <ion-card-content>
   <p>{{course_details.desp}}</p>
